--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -1,7 +1,7 @@
 .app {
   width: 100%;
   padding: 20px;
-  border: 1px solid #000;
+  border: 1px solid yellow;
   box-sizing: border-box;
 }
 
@@ -12,7 +12,7 @@ input {
 
 .add {
   margin-top: 20px;
-  background-color: #000;
+  background-color: deepskyblue;
   color: #fff;
   border: 0;
   box-sizing: border-box;
@@ -26,7 +26,7 @@ input {
 
 .item {
   width: 100%;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid orange;
   margin-bottom: 10px;
   padding-bottom: 10px;
   display: flex;
